Use Java 8 instead Java 14